# novuum.pro

./: .env.example  .gitignore  README.md  clientes-ejemplo.json  package-lock.json  package.json  playwright.config.ts  svelte.config.js  test-login-detailed.html  test-login.html
.github/workflows/: release.yml
docs/: DATA_LAYER.md  MANUAL_TEST_10MIN.md  POS_SESSION.md  SESSION_AUDIT.md
e2e/: anti-stuck.spec.ts  create-order-cards.spec.ts
scripts/: generate-icon-png.mjs  products-data.json  seed-products.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: desktop-download.ts  schemas.ts  session-debug.ts  types.ts  updater.ts  utils.ts  with-timeout-abort.ts
src/routes/: +layout.svelte  +page.svelte
supabase/: README_SUPABASE.md  business_settings_upgrade.sql  categories.sql  categories_seed.sql  groups.sql  groups_seed.sql  product_categories_many_to_many.sql  product_group_items.sql  product_group_items_parent.sql  product_product_groups.sql  product_product_groups_max.sql  products_category_fk.sql  products_image_url.sql  sabores_seed.sql  schema_v0.sql  storage_product_images_policies.sql
supabase/migrations/: 20260217120000_add_borrador_order_status.sql  20260217140000_orders_visible_to_all_users.sql  20260217150000_cadetes_table.sql  20260217160000_team_members_update_own.sql  20260217170000_sync_auth_users_to_team_members.sql  20260217180000_staff_guests_admin_only.sql  20260217190000_roles_array.sql  (+19 more)
(+95 files in other folders)
