[package]
name = "novum"
version = "0.1.0"
description = "POS Novum"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "novum"
doctest = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

